--- a/index.html
+++ b/index.html
@@ -7,25 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas></canvas>
-    <input id="line-width" type="range" min="1" max="10" value="5" step="0.5" />
-    <div>
+    <div class="color-options">
       <input id="color" type="color" />
-      <div
-        class="color-option"
-        style="background-color: #95a5a6"
-        data-color="#95a5a6"
-      ></div>
-      <div
-        class="color-option"
-        style="background-color: #bdc3c7"
-        data-color="#bdc3c7"
-      ></div>
-      <div
-        class="color-option"
-        style="background-color: #34495e"
-        data-color="#34495e"
-      ></div>
       <div
         class="color-option"
         style="background-color: #e74c3c"
@@ -58,11 +41,6 @@
       ></div>
       <div
         class="color-option"
-        style="background-color: #27ae60"
-        data-color="#27ae60"
-      ></div>
-      <div
-        class="color-option"
         style="background-color: #3498db"
         data-color="#3498db"
       ></div>
@@ -71,10 +49,31 @@
         style="background-color: #8e44ad"
         data-color="#8e44ad"
       ></div>
+      <div
+        class="color-option"
+        style="background-color: #34495e"
+        data-color="#34495e"
+      ></div>
     </div>
-    <button id="mode-btn">Fill</button>
-    <button id="erase-all-btn">Erase All</button>
-    <button id="erase-btn">Erase</button>
+    <canvas></canvas>
+    <div class="btns">
+      <input
+        id="line-width"
+        type="range"
+        min="1"
+        max="10"
+        value="5"
+        step="0.5"
+      />
+      <button id="mode-btn">Fill</button>
+      <button id="erase-all-btn">Erase All</button>
+      <button id="erase-btn">Erase</button>
+      <button id="save">Save image</button>
+      <label for="file"
+        >Add Photo<input id="file" type="file" accept="image/*"
+      /></label>
+      <input id="text" type="text" placeholder="Write and double click" />
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
